fixed 32bit system support created .exe runtime